@@ -33,8 +33,8 @@
 
 #include "kadmin_locl.h"
 
-__RCSID("$Heimdal: kadmind.c,v 1.28 2002/10/21 13:21:24 joda Exp $"
-        "$NetBSD: kadmind.c,v 1.9 2003/05/15 21:36:34 lha Exp $");
+__RCSID("$Heimdal: kadmind.c,v 1.28.2.1 2004/04/29 12:30:32 lha Exp $"
+         "$NetBSD: kadmind.c,v 1.10 2004/05/08 13:27:58 lha Exp $");
 
 static char *check_library  = NULL;
 static char *check_function = NULL;
@@ -47,7 +47,7 @@ static int debug_flag;
 static char *port_str;
 char *realm;
 #ifdef KRB4
-int do_kerberos4 = 1;
+int do_kerberos4 = 0;
 #endif
 
 static struct getargs args[] = {
@@ -76,7 +76,7 @@ static struct getargs args[] = {
 	"enable debugging" 
     },
 #ifdef KRB4
-    {	"kerberos4", 0, arg_negative_flag, &do_kerberos4,
+    {	"kerberos4", 0,		arg_flag,   &do_kerberos4,
 	"don't respond to kerberos 4 requests"
     },
 #endif
